src/WorkBC.Web/ClientApp/projects/jb-account/src/app/register/job-seeker/job-seeker.component.scss
::ng-deep app-job-seeker {

  .job-seeker-account-form {
    background: #ffffff;
  }

  .job-seeker-account {

    & > .container {

      @media(min-width: 940px) {
        width: 940px;
        margin: 0 auto;
        padding: 0;
      }
    }

    .account-ribbon {
      background: #bcdced;
      padding: 20px 20px;
      width: 100%;

      & > .container {
        padding: 0;
      }

      a {
        &:hover {
          text-decoration: underline;
        }

        &:after {
          content: "";
          display: inline-block;
          //background-image: url(/assets/icons/arrow-right.svg);
          width: 15px;
          height: 15px;
          position: relative;
          top: 3px;
        }
      }
    }

    .job-seeker-form {
      background-color: #ffffff;
      padding: 40px 0 0;

      @media(max-width: 939px) {
        order: 2;
      }

      .form-required {
        color: #c00;
      }

      h3 {
        margin-bottom: 25px;
        margin-top: 40px;
      }

      .apprentice-program {
        margin: 25px 0;
      }

      .identity-row {
        display: flex;
        flex-direction: column;

        @media(min-width: 768px) {
          flex-direction: row;
        }

        .identity-label {
          font-weight: 700;

          @media(min-width: 768px) {
            padding-right: 4px;
          }

          &.w-180 {
            @media(min-width: 768px) {
              width: 180px;
              max-width: 180px;
            }
          }
        }

        .identity-list {
          margin-bottom: 25px;
          font-size: 0.875rem;


          @media(min-width: 768px) {
            padding-right: 4px;
            margin-bottom: 0;
          }
        }

        .identity-infobox {
          padding: 20px;
          border: 1px solid #494949;
          margin-bottom: 25px;
          height: 100%;

          p {
            margin-bottom: 0;
          }

          @media(min-width: 768px) {
            margin-left: 80px;
            margin-bottom: 0;
            width: 280px;
            max-width: 280px;
          }
        }
      }

      .bc-region-map {
        padding: 20px 10px;

        &__image {
          max-width: 100%;

          @media(min-width: 940px) {
            max-width: 540px;
          }
        }
      }

      .captcha {
        margin: 25px 0;
      }

      .agree-terms {
        label, a {
          font-size: 0.875rem;
        }

        a {
          margin-left: 4px;
          font-size: 0.875rem;
          line-height: 1.125rem;

          &:hover {
            text-decoration: underline;
          }
        }
      }

      @media(min-width: 768px) {
        .w-285 {
          max-width: 285px;
        }

        .w-382 {
          max-width: 382px;
        }

        .w-252 {
          width: 252px;
          max-width: 252px;
        }

        .w-462 {
          max-width: 462px;
        }

        .w-150 {
          width: 150px;
          max-width: 150px;
        }
      }
    }

    .job-seeker-register-btn {
      width: 100%;
      margin-top: 30px;
      text-align: left;

      &:focus {
        border: 1px solid grey;
      }

      @media(min-width: 940px) {
        width: 200px;
      }
    }

    .side-banner {
      //background-image: url('/assets/images/jobseeker-register-bg.jpg');
      background-color: #003233;
      background-position: top right;
      background-repeat: no-repeat;
      padding: 35px 20px 60px;
      color: #fff;

      @media(max-width: 939px) {
        background-size: 100% 100%;
      }

      h3 {
        font-size: 1.25rem;
        font-weight: 600;
        margin-bottom: 15px;
      }

      a {
        color: #fff;
        text-decoration: underline;
      }

      ul {
        padding: 0 0 10px 30px;
        margin-bottom: 0px;
      }

      p {
        margin-bottom: 10px;
      }

      @media(max-width: 939px) {
        .content {
          max-width: 316px;
        }
      }
    }

    .register-row {
      margin-bottom: 60px;
    }
  }

  .flex-form-group {
    @media(min-width: 768px) {
      display: flex;
      align-items: center;
    }

    label {
      width: 180px;
      max-width: 180px;
      margin-bottom: 0;
      font-weight: 700;
    }
  }

  .empty-left-180 {
    @media(min-width: 768px) {
      margin-left: 180px;
    }
  }

  input[type=checkbox]:focus ~ label {
    outline: -webkit-focus-ring-color auto 1px;
  }
}

//i.e overrides and fixes
select::-ms-expand {
  display: none;
}

